[gd_scene load_steps=10 format=1]

[ext_resource path="res://scripts/menu.gd" type="Script" id=1]
[ext_resource path="res://assets/wallpaper.jpg" type="Texture" id=2]
[ext_resource path="res://font/customVeryVeryTiny.fnt" type="BitmapFont" id=3]
[ext_resource path="res://font/customVeryTiny.fnt" type="BitmapFont" id=4]
[ext_resource path="res://assets/blueWizard.png" type="Texture" id=5]
[ext_resource path="res://assets/redWizard.png" type="Texture" id=6]
[ext_resource path="res://assets/fireball.png" type="Texture" id=7]
[ext_resource path="res://assets/icicle.png" type="Texture" id=8]
[ext_resource path="res://assets/shock.png" type="Texture" id=9]

[node name="menu" type="Node2D"]

script/script = ExtResource( 1 )

[node name="wallpaper" type="Sprite" parent="."]

transform/pos = Vector2( 0, -1.70679 )
transform/scale = Vector2( 1.03963, 1.03963 )
texture = ExtResource( 2 )
centered = false

[node name="Label" type="Label" parent="."]

focus/ignore_mouse = true
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 0
margin/left = 30.0
margin/top = 798.0
margin/right = 176.0
margin/bottom = 915.0
custom_fonts/font = ExtResource( 3 )
text = "Ginard Falgueras
Albert Madrenys
Juny 2017"
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1

[node name="Level1" type="Button" parent="."]

focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 475.0
margin/top = 326.0
margin/right = 598.0
margin/bottom = 380.0
custom_fonts/font = ExtResource( 4 )
custom_colors/font_color = Color( 0.902344, 0.250259, 0.250259, 1 )
toggle_mode = false
enabled_focus_mode = 2
shortcut = null
text = "Level  1"
flat = false
clip_text = true

[node name="Level2" type="Button" parent="."]

focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 474.0
margin/top = 405.0
margin/right = 597.0
margin/bottom = 459.0
custom_fonts/font = ExtResource( 4 )
custom_colors/font_color = Color( 0.941406, 0.253738, 0.253738, 1 )
toggle_mode = false
enabled_focus_mode = 2
shortcut = null
text = "Level  2"
flat = false
clip_text = true

[node name="Level3" type="Button" parent="."]

focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 474.0
margin/top = 479.0
margin/right = 597.0
margin/bottom = 533.0
custom_fonts/font = ExtResource( 4 )
custom_colors/font_color = Color( 0.96875, 0.223267, 0.223267, 1 )
toggle_mode = false
enabled_focus_mode = 2
shortcut = null
text = "Level  3"
flat = false
clip_text = true

[node name="HowToPlay" type="Button" parent="."]

focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 1518.0
margin/top = 862.0
margin/right = 1641.0
margin/bottom = 916.0
custom_fonts/font = ExtResource( 3 )
custom_colors/font_color = Color( 0.828125, 0.229675, 0.229675, 1 )
toggle_mode = false
enabled_focus_mode = 2
shortcut = null
text = "  How to play?"
flat = false
clip_text = true

[node name="Popup" type="Popup" parent="."]

editor/display_folded = true
visibility/visible = false
focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 0.0
margin/top = 0.0
margin/right = 40.0
margin/bottom = 40.0
popup/exclusive = false

[node name="ColorFrame" type="ColorFrame" parent="Popup"]

focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 353.0
margin/top = 269.0
margin/right = 1392.0
margin/bottom = 734.0
color = Color( 0.090332, 0.411968, 0.625, 1 )

[node name="Blue" type="Sprite" parent="Popup/ColorFrame"]

transform/pos = Vector2( 104.981, 156.516 )
transform/scale = Vector2( 2.99218, 2.99218 )
texture = ExtResource( 5 )
hframes = 6
frame = 1

[node name="Red" type="Sprite" parent="Popup/ColorFrame"]

transform/pos = Vector2( 602.981, 156.516 )
transform/scale = Vector2( 2.99218, 2.99218 )
texture = ExtResource( 6 )
hframes = 6
frame = 1

[node name="Mov1" type="Label" parent="Popup/ColorFrame"]

focus/ignore_mouse = true
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 0
margin/left = 204.0
margin/top = 87.0
margin/right = 273.0
margin/bottom = 101.0
text = "Movement"
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1

[node name="Mov2" type="Label" parent="Popup/ColorFrame"]

focus/ignore_mouse = true
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 0
margin/left = 710.0
margin/top = 88.0
margin/right = 779.0
margin/bottom = 102.0
text = "Movement"
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1

[node name="Fire1" type="Sprite" parent="Popup/ColorFrame"]

transform/pos = Vector2( 234.674, 129.82 )
texture = ExtResource( 7 )
vframes = 8
hframes = 8

[node name="Fire2" type="Sprite" parent="Popup/ColorFrame"]

transform/pos = Vector2( 735.291, 142.063 )
texture = ExtResource( 7 )
vframes = 8
hframes = 8

[node name="Ice1" type="Sprite" parent="Popup/ColorFrame"]

transform/pos = Vector2( 233.313, 180.154 )
texture = ExtResource( 8 )
vframes = 8
hframes = 8

[node name="Ice2" type="Sprite" parent="Popup/ColorFrame"]

transform/pos = Vector2( 739.372, 182.874 )
texture = ExtResource( 8 )
vframes = 8
hframes = 8

[node name="Shock1" type="Sprite" parent="Popup/ColorFrame"]

transform/pos = Vector2( 230.592, 237.289 )
texture = ExtResource( 9 )
vframes = 8
hframes = 4

[node name="Shock2" type="Sprite" parent="Popup/ColorFrame"]

transform/pos = Vector2( 738.012, 234.568 )
texture = ExtResource( 9 )
vframes = 8
hframes = 4

[node name="CMov1" type="Label" parent="Popup/ColorFrame"]

focus/ignore_mouse = true
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 0
margin/left = 326.0
margin/top = 86.0
margin/right = 395.0
margin/bottom = 100.0
text = "A,S,D,W"
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1

[node name="CMov2" type="Label" parent="Popup/ColorFrame"]

focus/ignore_mouse = true
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 0
margin/left = 836.0
margin/top = 87.0
margin/right = 905.0
margin/bottom = 101.0
text = "Arrows"
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1

[node name="CFire1" type="Label" parent="Popup/ColorFrame"]

focus/ignore_mouse = true
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 0
margin/left = 325.0
margin/top = 123.0
margin/right = 394.0
margin/bottom = 137.0
text = "T"
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1

[node name="CFire2" type="Label" parent="Popup/ColorFrame"]

focus/ignore_mouse = true
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 0
margin/left = 839.0
margin/top = 132.0
margin/right = 908.0
margin/bottom = 146.0
text = "Fin"
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1

[node name="CIce1" type="Label" parent="Popup/ColorFrame"]

focus/ignore_mouse = true
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 0
margin/left = 324.0
margin/top = 171.0
margin/right = 392.0
margin/bottom = 185.0
text = "Y"
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1

[node name="CIce2" type="Label" parent="Popup/ColorFrame"]

focus/ignore_mouse = true
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 0
margin/left = 838.0
margin/top = 177.0
margin/right = 907.0
margin/bottom = 191.0
text = "Ins"
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1

[node name="CShock1" type="Label" parent="Popup/ColorFrame"]

focus/ignore_mouse = true
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 0
margin/left = 324.0
margin/top = 230.0
margin/right = 392.0
margin/bottom = 244.0
text = "U"
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1

[node name="CShock2" type="Label" parent="Popup/ColorFrame"]

focus/ignore_mouse = true
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 0
margin/left = 839.0
margin/top = 226.0
margin/right = 908.0
margin/bottom = 240.0
text = "Supr"
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1

[node name="Instructions" type="Label" parent="Popup/ColorFrame"]

focus/ignore_mouse = true
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 0
margin/left = 346.0
margin/top = 329.0
margin/right = 671.0
margin/bottom = 411.0
text = "1 vs 1 game

You must destroy your oponent lowering his life at 0

You can do it using diferent types of magic"
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1

[connection signal="pressed" from="Level1" to="." method="_on_Level1_pressed"]

[connection signal="pressed" from="Level2" to="." method="_on_Level2_pressed"]

[connection signal="pressed" from="Level3" to="." method="_on_Level3_pressed"]

[connection signal="pressed" from="HowToPlay" to="." method="_on_HowToPlay_pressed"]


